# latz-imgur

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
latz_imgur/: __version__.py  main.py
